--- a/index.html
+++ b/index.html
@@ -133,24 +133,31 @@
                 </li>
                 <!-- Inventory -->
                 <li class="w-full items-center cursor-pointer justify-between" x-data="{ open: false }">
-                    <div class="flex justify-between px-10" x-on:click="open = ! open">
-                        <button class="font-semibold">Inventory</button>
-                        <svg class="w-10 h-10 fill-current" viewBox="0 0 64 64"
-                            xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <style type="text/css">
-                                .st0 {
-                                    fill: #000000;
-                                }
-                            </style>
-                            <g>
-                                <g id="Icon-Chevron-Left" transform="translate(237.000000, 335.000000)">
-                                    <polyline class="st0" id="Fill-35"
-                                        points="-218.7,-308.6 -216.7,-310.6 -205,-298.8 -193.3,-310.6 -191.3,-308.6 -205,-294.9      -218.7,-308.6    " />
+                    <div x-on:click="open = ! open">
+                        <div class="w-full flex justify-between px-10" x-data="{selected:false}"
+                            x-on:click="selected=!open">
+                            <button class="font-semibold">Inventory</button>
+                            <svg class="w-10 h-10 fill-current transition-all duration-1000"
+                                x-bind:class="{'rotate' : selected}" viewBox="0 0 64 64"
+                                xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <style type="text/css">
+                                    .st0 {
+                                        fill: #000000;
+                                    }
+                                </style>
+                                <g>
+                                    <g id="Icon-Chevron-Left" transform="translate(237.000000, 335.000000)">
+                                        <polyline class="st0" id="Fill-35"
+                                            points="-218.7,-308.6 -216.7,-310.6 -205,-298.8 -193.3,-310.6 -191.3,-308.6 -205,-294.9      -218.7,-308.6    " />
+                                    </g>
                                 </g>
-                            </g>
-                        </svg>
+                            </svg>
+                        </div>
                     </div>
-                    <ul class="my-2 w-full" x-show="open">
+                    <ul class="my-2 w-full" x-show="open" x-transition:enter="transition ease-out duration-1000"
+                        x-transition:enter-start="opacity-0 scale-90" x-transition:enter-end="opacity-100 scale-100"
+                        x-transition:leave="transition ease-in duration-1000"
+                        x-transition:leave-start="opacity-100 scale-100" x-transition:leave-end="opacity-0 scale-90">
                         <div @click.prevent="menu='TambahkanProduk'">
                             <li class="my-2 px-14 py-1"
                                 :class="{'bg-orange-100 w-full text-orange-500': menu === 'TambahkanProduk'}">
@@ -164,23 +171,28 @@
                     </ul>
                 </li>
                 <!-- Pengaturan Akun -->
-                <li class="w-full flex cursor-pointer items-center justify-between px-10"
-                    :class="{'bg-orange-100 w-full text-orange-500': menu === 'PengaturanAkun'}"
-                    @click.prevent="menu='PengaturanAkun'">
-                    <span class="font-semibold">Pengaturan Akun</span>
-                    <svg class="w-10 h-10 fill-current" viewBox="0 0 64 64" xmlns:xlink="http://www.w3.org/1999/xlink">
-                        <style type="text/css">
-                            .st0 {
-                                fill: #000000;
-                            }
-                        </style>
-                        <g>
-                            <g id="Icon-Chevron-Left" transform="translate(237.000000, 335.000000)">
-                                <polyline class="st0" id="Fill-35"
-                                    points="-218.7,-308.6 -216.7,-310.6 -205,-298.8 -193.3,-310.6 -191.3,-308.6 -205,-294.9      -218.7,-308.6    " />
-                            </g>
-                        </g>
-                    </svg>
+                <li class="w-full items-center cursor-pointer justify-between" x-data="{ open: false }">
+                    <div x-on:click="open = ! open">
+                        <div class="w-full flex justify-between px-10" x-data="{selected:false}"
+                            x-on:click="selected=!open">
+                            <button class="font-semibold">Pengaturan Akun</button>
+                            <svg class="w-10 h-10 fill-current transition-all duration-1000"
+                                x-bind:class="{'rotate' : selected}" viewBox="0 0 64 64"
+                                xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <style type="text/css">
+                                    .st0 {
+                                        fill: #000000;
+                                    }
+                                </style>
+                                <g>
+                                    <g id="Icon-Chevron-Left" transform="translate(237.000000, 335.000000)">
+                                        <polyline class="st0" id="Fill-35"
+                                            points="-218.7,-308.6 -216.7,-310.6 -205,-298.8 -193.3,-310.6 -191.3,-308.6 -205,-294.9      -218.7,-308.6    " />
+                                    </g>
+                                </g>
+                            </svg>
+                        </div>
+                    </div>
                 </li>
             </ul>
         </div>
