--- a/index.html
+++ b/index.html
@@ -4083,7 +4083,7 @@
                         <li class="-mb-px mr-1">
                             <a class="inline-block pb-5 pt-2 px-4 font-semibold hover:text-orange-600"
                                 :class="{'text-orange-500 border-orange-700 border-b-2': tabpengembalian === 'pembatalan'}"
-                                href="#" @click.prevent="menu = 'Pesanan'">Pembatalan</a>
+                                href="#" @click.prevent="menu = 'Pembatalan'">Pembatalan</a>
                         </li>
                         <li class="-mb-px mr-1">
                             <a class="inline-block pb-5 pt-2 px-4 font-semibold hover:text-orange-600"
