--- a/Test/Modal/index.html
+++ b/Test/Modal/index.html
@@ -38,7 +38,7 @@
 <body class="text-gray-800 bg-gray-200">
     <div class="container mx-auto px-4 xl:px-64 py-10">
         <h1 class="text-2xl font-bold">Modal</h1>
-        <!-- <div x-data="{isOpen: false}">
+        <div x-data="{isOpen: false}">
             <button class="bg-blue-700 text-white px-4 py-1 text-sm rounded" @click="isOpen=true">Open
                 Modal</button>
             <div class="mx-auto absolute top-0 left-0 w-full h-full flex items-center shadow-lg overflow-y-auto"
@@ -58,7 +58,7 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
     </div>
     <!-- <div class="h-96 w-full bg-orange-100"></div>
     <div class="h-96 w-full bg-orange-200"></div>
