--- a/Test/Toggle/index.html
+++ b/Test/Toggle/index.html
@@ -20,7 +20,7 @@
         }
     </script>
     <style>
-        .rotate {
+        .toggle {
             color: blueviolet;
             fill: #0004ff;
             stroke: aqua;
@@ -42,12 +42,12 @@
                             x-on:click="selected=!open">
                             <button class="font-semibold">Pesanan</button>
                             <svg class="w-10 h-10 fill-current transition-all duration-1000"
-                                x-bind:class="{'rotate' : selected}" viewBox="-1 0 28 28">
-                                <path x-bind:class="{'rotate' : selected}" stroke="black" fill="white"
+                                x-bind:class="{'toggle' : selected}" viewBox="-1 0 28 28">
+                                <path x-bind:class="{'toggle' : selected}" stroke="black" fill="white"
                                     d="M22.2,4.1c2.7,2.7,2.4,6.9-0.4,9.5l-8.4,7.9c-0.8,0.7-2.1,0.7-2.9,0l-8.4-7.9c-2.7-2.6-3-6.8-0.4-9.5   C4.6,1.4,9.2,1.3,12,4C14.8,1.3,19.4,1.4,22.2,4.1z" />
                             </svg>
                             <svg width="100" height="100">
-                                <circle x-bind:class="{'rotate' : selected}" cx="50" cy="50" r="40" stroke="green"
+                                <circle x-bind:class="{'toggle' : selected}" cx="50" cy="50" r="40" stroke="green"
                                     stroke-width="4" fill="white" />
                             </svg>
                         </div>
