--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             background-color: #ffedd5;
         }
     </style>
-    <title>Website Alpine JS</title>
+    <title>Page Admin</title>
 </head>
 
 <body class="bg-rose-50" x-data="{
