--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             <!-- Pesanan -->
             <div x-show="menu === 'Pesanan'">
                 <!-- Menu -->
-                <div class="w-full links links">
+                <div class="w-full">
                     <ul class="flex justify-evenly font-semibold bg-white rounded-t-lg pt-5">
                         <li class="-mb-px mr-1">
                             <a class="inline-block pb-5 pt-2 px-4 font-semibold hover:text-orange-600"
