--- a/index.html
+++ b/index.html
@@ -39,6 +39,38 @@
     tabpembatalan: 'pembatalan' ,
     tabpengembalian: 'pengembalian' ,
     }">
+    <!-- Header Start -->
+    <header class="flex py-3 items-center bg-white justify-between px-10">
+        <!-- Logo Start -->
+        <img class="w-44 h-14" src="https://source.unsplash.com/1000x600?pc" alt="logo">
+        <!-- Logo End -->
+        <!-- Logo Start -->
+        <div class=" flex gap-5 items-center">
+            <!-- Logo 1 Start -->
+            <svg class="w-7 h-7 fill-current text-secondary" viewBox="0 0 512 512">
+                <path
+                    d="M381.7,225.9c0-97.6-52.5-130.8-101.6-138.2c0-0.5,0.1-1,0.1-1.6c0-12.3-10.9-22.1-24.2-22.1c-13.3,0-23.8,9.8-23.8,22.1   c0,0.6,0,1.1,0.1,1.6c-49.2,7.5-102,40.8-102,138.4c0,113.8-28.3,126-66.3,158h384C410.2,352,381.7,339.7,381.7,225.9z" />
+                <path d="M256.2,448c26.8,0,48.8-19.9,51.7-43H204.5C207.3,428.1,229.4,448,256.2,448z" />
+            </svg>
+            <!-- Logo 1 End -->
+            <!-- Logo 2 Start -->
+            <svg class="w-7 h-7 fill-current text-secondary" viewBox="0 0 24 24">
+                <polygon points="3 12 8.61 14.992 17 8 9 17.455 9 21 12.164 16.887 18 20 21 3 3 12" />
+            </svg>
+            <!-- Logo 2 End  -->
+            <!-- Logo End -->
+            <!-- Profile Start -->
+            <div class="flex gap-2 h-full items-center">
+                <p>Dhika Zukrup</p>
+                <svg class="w-10 h-10 fill-current text-secondary" viewBox="0 0 24 24">
+                    <circle cx="12" cy="8" r="4" />
+                    <path d="M20,19v1a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V19a6,6,0,0,1,6-6h4A6,6,0,0,1,20,19Z" />
+                </svg>
+            </div>
+            <!-- Profile End -->
+        </div>
+    </header>
+    <!-- Header End -->
     <div class="container h-fit grid grid-cols-12 mx-10 my-10">
         <div class="col-span-3 h-full bg-white py-3 mr-5 rounded-lg">
             <h1 class="text-2xl font-bold mb-5 px-5">Menu</h1>
@@ -6927,10 +6959,8 @@
                         </div>
                     </div>
                     <div class="flex w-full justify-end mb-5 text-white mt-10 gap-5">
-                        <a class="p-1 rounded-md flex justify-center bg-primary w-40"
-                            href="/dist/pages/popup/popupberhasil.html">Simpan</a>
-                        <a class="p-1 rounded-md flex justify-center bg-primary w-40"
-                            href="/dist/pages/keuangan/pengaturan/masukanpinbaru.html">Ubah</a>
+                        <a class="p-1 rounded-md flex justify-center bg-primary w-40" href="#">Simpan</a>
+                        <a class="p-1 rounded-md flex justify-center bg-primary w-40" href="#">Ubah</a>
                         <a class="p-1 rounded-md flex justify-center bg-primary w-40" href="#">Lupa PIN</a>
                     </div>
                 </div>
