--- a/index.html
+++ b/index.html
@@ -28,6 +28,55 @@
             color: #f97316;
             background-color: #ffedd5;
         }
+
+        .disable-scroll {
+            overflow: hidden;
+        }
+
+        .btn {
+            padding: 0.5rem 1rem;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            cursor: pointer;
+            outline: none;
+        }
+
+        .btn:active {
+            transform: scale(0.9);
+        }
+
+        .close-modal {
+            background: none;
+            border: none;
+        }
+
+        .modal {
+            position: fixed;
+            top: -80%;
+            left: 400px;
+            transform: translate(-50%, -50%);
+            transition: top 0.3s ease-in-out;
+        }
+
+        .modal.active {
+            top: 15%;
+            left: 400px;
+        }
+
+        #overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.3);
+            z-index: 2;
+        }
+
+        #overlay.active {
+            display: block;
+        }
     </style>
     <title>Page Admin</title>
 </head>
@@ -41,6 +90,7 @@
     }">
     <!-- Header Start -->
     <header class="flex py-3 items-center bg-white justify-between px-10">
+        <div id="overlay"></div>
         <!-- Logo Start -->
         <img class="w-44 h-14" src="https://source.unsplash.com/1000x600?pc" alt="logo">
         <!-- Logo End -->
@@ -217,24 +267,23 @@
                 </li>
                 <!-- Pengaturan Akun -->
                 <li class="w-full items-center cursor-pointer justify-between">
-                        <div class="w-full flex justify-between px-10">
-                            <button class="font-semibold">Pengaturan Akun</button>
-                            <svg class="w-10 h-10 fill-current transition-all duration-1000"
-                                viewBox="0 0 64 64"
-                                xmlns:xlink="http://www.w3.org/1999/xlink">
-                                <style type="text/css">
-                                    .st0 {
-                                        fill: #000000;
-                                    }
-                                </style>
-                                <g>
-                                    <g id="Icon-Chevron-Left" transform="translate(237.000000, 335.000000)">
-                                        <polyline class="st0" id="Fill-35"
-                                            points="-218.7,-308.6 -216.7,-310.6 -205,-298.8 -193.3,-310.6 -191.3,-308.6 -205,-294.9      -218.7,-308.6    " />
-                                    </g>
+                    <div class="w-full flex justify-between px-10">
+                        <button class="font-semibold">Pengaturan Akun</button>
+                        <svg class="w-10 h-10 fill-current transition-all duration-1000" viewBox="0 0 64 64"
+                            xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <style type="text/css">
+                                .st0 {
+                                    fill: #000000;
+                                }
+                            </style>
+                            <g>
+                                <g id="Icon-Chevron-Left" transform="translate(237.000000, 335.000000)">
+                                    <polyline class="st0" id="Fill-35"
+                                        points="-218.7,-308.6 -216.7,-310.6 -205,-298.8 -193.3,-310.6 -191.3,-308.6 -205,-294.9      -218.7,-308.6    " />
                                 </g>
-                            </svg>
-                        </div>
+                            </g>
+                        </svg>
+                    </div>
                 </li>
             </ul>
         </div>
@@ -6274,9 +6323,44 @@
                         <p class="font-light py-1 px-2 rounded-sm bg-orange-100">Utama</p>
                     </div>
                     <p class="font-semibold">******1726</p>
-                    <div class="flex justify-between items-center">
-                        <a class="text-primary font-medium" href="#">Lainnya>>></a>
-                        <a class="py-2 px-5 mb-5 rounded-md bg-primary text-white" href="#">Tarik Saldo</a>
+                    <div class="grid grid-cols-12 h-20 self-center gap-1 mb-5 text-sm">
+                        <button class="text-primary font-medium col-start-1" href="#">Lainnya>>></button>
+                        <!-- Add To Bag Start -->
+                        <button type="button"
+                            class="text-center h-10 px-5 col-span-2 col-start-11 bg-primary rounded-md text-white"
+                            data-target="#modal1">Tarik Saldo
+                        </button>
+                        <!-- Pop Up Start -->
+                        <div class="bg-white relative flex-col justify-center opacity-100 rounded z-10 p-10 w-[600px] h-[600px] text-center modal"
+                            id="modal1">
+                            <svg class="h-[130px] fill-current text-secondary flex w-full mb-5"
+                                style="enable-background:new 0 0 24 24;" version="1.1" viewBox="0 0 24 24">
+                                <path class="st0"
+                                    d="M20.9,6H17V5c0-2.8-2.2-5-5-5S7,2.2,7,5v5h2V8h4V6H9V5c0-1.7,1.3-3,3-3c1.7,0,3,1.3,3,3v5h2V8h2.1l0.9,14H4.1  L4.9,8H5V6H3.1L1.9,24h20.1L20.9,6z" />
+                            </svg>
+                            <h2 class="text-3xl h-fit mb-3">SUDAH DITAMBAHKAN KE CHART KAMU</h2>
+                            <div class="border-b-2 my-5"></div>
+                            <div class="flex gap-5">
+                                <img class="w-[200px] h-[200px]" src="https://source.unsplash.com/1000x600?beach">
+                                <div class="w-2/3 text-left">
+                                    <p class="font-medium text-[25px] mb-2">MUKKA</p>
+                                    <p class="text-[25px] mb-2">MUKKA LIP CREAM MATEE</p>
+                                    <p class="text-sm font-light">ORANGE</p>
+                                    <button
+                                        class="w-[200px] h-[45px] text-[20px] bg-secondary rounded-md mt-[75px] text-white">VIEW
+                                        CHART</button>
+                                </div>
+                            </div>
+                            <div class="mt-2 absolute top-0 right-5">
+                                <button type="button" class="close-modal">
+                                    <svg class="w-10 fill-current text-forth" viewBox="0 0 24 24" width="24">
+                                        <path d="M6 18L18 6M6 6L18 18" stroke="#94a3b8" stroke-linecap="round"
+                                            stroke-linejoin="round" stroke-width="2" /></svg>
+                                </button>
+                            </div>
+                        </div>
+                        <!-- Pop Up End -->
+                        <!-- Add To Bag End -->
                     </div>
                 </div>
                 <!-- Bagian Atas -->
@@ -8113,5 +8197,6 @@
         </div>
     </div>
 </body>
+<script src="./script.js"></script>
 
 </html>
